Added french translation with astro-inext

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,9 @@
   "editor.rulers": [120],
   "files.associations": {
     "*.mdx": "markdown"
-  }
+  },
+  "i18n-ally.localesPaths": [
+    "src/i18n",
+    "src/i18n/locales"
+  ]
 }
