--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "@iconify-json/lucide-lab": "^1.2.1",
     "alpinejs": "^3.14.3",
     "astro": "^4.16.7",
+    "astro-i18next": "1.0.0-beta.21",
     "astro-iconify": "^1.2.0",
     "astro-seo": "^0.8.4",
     "better-sqlite3": "^11.5.0",
     "htmx.org": "2.0.1",
+    "i18next": "^23.16.5",
+    "i18next-fs-backend": "^2.3.2",
     "isomorphic-dompurify": "^2.16.0",
     "marked": "^14.1.3",
     "tinymce": "^7.4.1"
